--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
